# OpenJpeg2KTool

./: .gitignore  CMakeLists.txt  OpenJpeg2KTool.cpp  OpenJpeg2KTool.h  README.md  main.cpp
